vm/snapshots/class_format-InterfaceFlagWithoutAbstractTest.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Error: LinkageError occurred while loading main class class_format.InterfaceFlagWithoutAbstractTest
java.lang.ClassFormatError: Illegal class modifiers in class class_format/InterfaceFlagWithoutAbstractTest: 0x200

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Error: LinkageError occurred while loading main class class_format.InterfaceFlagWithoutAbstractTest
	java.lang.ClassFormatError: Illegal class modifiers in class class_format/InterfaceFlagWithoutAbstractTest: 0x200
