vm/snapshots/classes-abstract_classes-basic-AbstractClassOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Abstract class tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Abstract class tests passed.
----- STDERR -----
