vm/snapshots/classes-basic-class_declaration-ClassDeclarationOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Basic class tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Basic class tests passed.
----- STDERR -----
