vm/snapshots/classes-inheritance-single-SingleInheritanceOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Single inheritance tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Single inheritance tests passed.
----- STDERR -----
