vm/snapshots/control_flow-loops-do_while-DoWhileLoopOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
===== Lagertha VM =====
----- exit: Some(0) -----
----- STDOUT -----
Do-while loop tests passed.
----- STDERR -----


===== Real JVM =====
----- exit: Some(0) -----
----- STDOUT -----
Do-while loop tests passed.
----- STDERR -----
