vm/snapshots/exceptions-asserts-failed_assert-FailedAssertErrMain.snap
---
source: vm/tests/integration_test.rs
expression: "&combined"
---
===== Lagertha VM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.AssertionError: Error message
	at exceptions.asserts.failed_assert.FailedAssertErrMain.main(FailedAssertErrMain.java:5)

===== Real JVM =====
----- exit: Some(1) -----
----- STDOUT -----

----- STDERR -----
Exception in thread "main" java.lang.AssertionError: Error message
	at exceptions.asserts.failed_assert.FailedAssertErrMain.main(FailedAssertErrMain.java:5)
