vm/snapshots/exceptions-catch_specific-CatchSpecificExceptionShouldWorkOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
Caught NullPointerException
----- STDERR -----
