vm/snapshots/exceptions-catch_without_throw-CatchWithoutThrowShouldWorkOkMain.snap
---
source: vm/tests/integration_test.rs
expression: combined
---
----- STDOUT -----
In try block
After try-catch
----- STDERR -----
